# firm_name_search

./: Makefile  README.md  __main__.py  dodo.py  requirements.txt  setup.cfg  setup.py  test_requirements.txt
firm_name_search/: build_compinfo_index.py  build_index.py  db.py  index.py  main.py  name_to_taxid.py  names.py  names_test.py  normalizations.py  normalizations_test.py  parse_firm_name.py  parse_firm_name_test.py  score.py  search.py  search_test.py  test_index.py  test_name_to_taxids.py  test_names.py  test_normalizations.py  test_search.py  transliterate_cyrillic.py
