[metadata]
name = firm_name_search
version = 1.1.1
author = Krisztián Fekete
author-email = fekete.krisztyan@gmail.com
summary = Resolve Hungarian Firm Names to Tax Ids
description-file = README.md
home-page = https://github.com/ceumicrodata/firm_name_search
requires-python = >=2.7
classifier =
    Development Status :: 1 - Planning
    Environment :: Console
    License :: Other/Proprietary License

[files]
packages =
    firm_name_search

[entry_points]
console_scripts =
	name-to-taxid = firm_name_search.name_to_taxid:main
